--- a/foo-corp/namespaces/viewers-rolebinding.yaml
+++ b/foo-corp/namespaces/viewers-rolebinding.yaml
@@ -8,5 +8,5 @@ subjects:
   apiGroup: rbac.authorization.k8s.io
 roleRef:
   kind: ClusterRole
-  name: view
+  name: views
   apiGroup: rbac.authorization.k8s.io
