This reverts commit 057f2595cab59749e008959bd10fe640d3f47692.

--- a/foo-corp/namespaces/viewers-rolebinding.yaml
+++ b/foo-corp/namespaces/viewers-rolebinding.yaml
@@ -8,5 +8,5 @@ subjects:
   apiGroup: rbac.authorization.k8s.io
 roleRef:
   kind: ClusterRole
-  name: views
+  name: view
   apiGroup: rbac.authorization.k8s.io
